<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_open_browser"
        android:title="@string/open_in_browser" />
    <item
        android:id="@+id/action_open_webview"
        android:title="@string/open_in_webview" />
    <item
        android:id="@+id/action_test_actions"
        android:title="@string/test_actions" />
    <item
        android:id="@+id/action_edit"
        android:title="@string/edit" />
    <item
        android:id="@+id/action_duplicate"
        android:title="@string/duplicate" />
    <item
        android:id="@+id/action_export_site"
        android:title="@string/export_site" />
    <item
        android:id="@+id/action_check_now"
        android:title="@string/check_now" />
    <item
        android:id="@+id/action_view_diff"
        android:title="@string/view_diff" />
    <item
        android:id="@+id/action_view_data"
        android:title="@string/view_data" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete" />
</menu>
