<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/siteListFragment">

    <fragment
        android:id="@+id/siteListFragment"
        android:name="com.ltrudu.sitewatcher.ui.sitelist.SiteListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_site_list">
        <action
            android:id="@+id/action_siteList_to_addEdit"
            app:destination="@id/addEditFragment" />
        <action
            android:id="@+id/action_siteList_to_diffViewer"
            app:destination="@id/diffViewerFragment" />
        <action
            android:id="@+id/action_siteList_to_settings"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_siteList_to_about"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_siteList_to_backups"
            app:destination="@id/backupsManagerFragment" />
        <action
            android:id="@+id/action_siteList_to_dataViewer"
            app:destination="@id/dataViewerFragment" />
    </fragment>

    <fragment
        android:id="@+id/addEditFragment"
        android:name="com.ltrudu.sitewatcher.ui.addedit.AddEditFragment"
        android:label=""
        tools:layout="@layout/fragment_add_edit">
        <argument
            android:name="siteId"
            app:argType="long"
            android:defaultValue="-1L" />
        <action
            android:id="@+id/action_addEdit_to_browserDiscovery"
            app:destination="@id/browserDiscoveryFragment" />
        <action
            android:id="@+id/action_addEdit_to_selectorBrowser"
            app:destination="@id/selectorBrowserFragment" />
        <action
            android:id="@+id/action_addEdit_to_interactivePicker"
            app:destination="@id/interactivePickerFragment" />
        <action
            android:id="@+id/action_addEdit_to_actionTester"
            app:destination="@id/actionTesterFragment" />
        <action
            android:id="@+id/action_addEdit_to_editActions"
            app:destination="@id/editActionsFragment" />
        <action
            android:id="@+id/action_addEdit_to_editSchedules"
            app:destination="@id/editSchedulesFragment" />
    </fragment>

    <fragment
        android:id="@+id/editActionsFragment"
        android:name="com.ltrudu.sitewatcher.ui.addedit.EditActionsFragment"
        android:label="@string/edit_actions">
        <argument
            android:name="url"
            app:argType="string" />
        <argument
            android:name="actions_json"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_editActions_to_selectorBrowser"
            app:destination="@id/selectorBrowserFragment" />
        <action
            android:id="@+id/action_editActions_to_interactivePicker"
            app:destination="@id/interactivePickerFragment" />
        <action
            android:id="@+id/action_editActions_to_actionTester"
            app:destination="@id/actionTesterFragment" />
        <action
            android:id="@+id/action_editActions_to_coordinatePicker"
            app:destination="@id/coordinatePickerFragment" />
    </fragment>

    <fragment
        android:id="@+id/editSchedulesFragment"
        android:name="com.ltrudu.sitewatcher.ui.addedit.EditSchedulesFragment"
        android:label="@string/edit_schedules"
        tools:layout="@layout/fragment_edit_schedules">
        <argument
            android:name="schedules_json"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/selectorBrowserFragment"
        android:name="com.ltrudu.sitewatcher.ui.selector.SelectorBrowserFragment"
        android:label="@string/pick_element"
        tools:layout="@layout/fragment_selector_browser">
        <argument
            android:name="url"
            app:argType="string" />
        <argument
            android:name="actions_json"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/interactivePickerFragment"
        android:name="com.ltrudu.sitewatcher.ui.selector.InteractivePickerFragment"
        android:label="@string/pick_click_element"
        tools:layout="@layout/fragment_interactive_picker">
        <argument
            android:name="url"
            app:argType="string" />
        <argument
            android:name="actions_json"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/actionTesterFragment"
        android:name="com.ltrudu.sitewatcher.ui.selector.ActionTesterFragment"
        android:label="@string/test_actions"
        tools:layout="@layout/fragment_action_tester">
        <argument
            android:name="url"
            app:argType="string" />
        <argument
            android:name="actions_json"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/coordinatePickerFragment"
        android:name="com.ltrudu.sitewatcher.ui.selector.CoordinatePickerFragment"
        android:label="@string/add_tap_at_coords"
        tools:layout="@layout/fragment_coordinate_picker">
        <argument
            android:name="url"
            app:argType="string" />
        <argument
            android:name="actions_json"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/browserDiscoveryFragment"
        android:name="com.ltrudu.sitewatcher.ui.browser.BrowserDiscoveryFragment"
        android:label="@string/browse"
        tools:layout="@layout/fragment_browser_discovery" />

    <fragment
        android:id="@+id/diffViewerFragment"
        android:name="com.ltrudu.sitewatcher.ui.diff.DiffViewerFragment"
        android:label="@string/view_diff"
        tools:layout="@layout/fragment_diff_viewer">
        <argument
            android:name="siteId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/backupsManagerFragment"
        android:name="com.ltrudu.sitewatcher.ui.backups.BackupsManagerFragment"
        android:label="@string/backups_manager"
        tools:layout="@layout/fragment_backups_manager">
        <action
            android:id="@+id/action_backups_to_diffViewer"
            app:destination="@id/diffViewerFragment" />
        <action
            android:id="@+id/action_backups_to_backupViewer"
            app:destination="@id/backupViewerFragment" />
    </fragment>

    <fragment
        android:id="@+id/backupViewerFragment"
        android:name="com.ltrudu.sitewatcher.ui.backups.BackupViewerFragment"
        android:label="@string/backup_viewer_title"
        tools:layout="@layout/fragment_backup_viewer">
        <argument
            android:name="historyId"
            app:argType="long" />
        <argument
            android:name="showRendered"
            app:argType="boolean"
            android:defaultValue="true" />
    </fragment>

    <fragment
        android:id="@+id/dataViewerFragment"
        android:name="com.ltrudu.sitewatcher.ui.dataviewer.DataViewerFragment"
        android:label="@string/view_data"
        tools:layout="@layout/fragment_data_viewer">
        <argument
            android:name="siteId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.ltrudu.sitewatcher.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.ltrudu.sitewatcher.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

</navigation>
